# parquet-modular-encryption

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  kms_client.py  kms_server.py  mise.toml  pyproject.toml  read_encrypted_parquet.py  requirements.in  requirements.txt  taskfile.yaml  write_encrypted_parquet.py
