# vim: set ft=toml :


[project]
name = 'parquet-modular-encryption'


[tool.pixi.workspace]
channels = ['conda-forge']
platforms = [
  'linux-64',
  'linux-aarch64',
  'osx-64',
  'osx-arm64',
]

[tool.pixi.dependencies]
python = { version = '>=3.14.3,<3.15' }

[tool.pixi.pypi-dependencies]
cryptography = { version = '>=46.0.5' }
fastapi = { version = '>=0.129.0' }
httpx = { version = '>=0.28.1' }
pyarrow = { version = '>=23.0.0' }
pydantic = { version = '>=2.12.5' }
uvicorn = { version = '>=0.40.0', extras = ['standard'] }

[tool.pixi.tasks]
serve = { cmd = ['python', 'kms_server.py'] }
write = { cmd = ['python', 'write_encrypted_parquet.py'] }
read = { cmd = ['python', 'read_encrypted_parquet.py'] }

[tool.pixi.environments]
default = { solve-group = 'default' }
lint = { features = ['lint'], solve-group = 'default' }

[tool.pixi.feature.lint.dependencies]
prek = { version = '>=0.3.2' }
ruff = { version = '>=0.15.1' }

[tool.pixi.feature.lint.tasks]
lint = { depends-on = ['prek-run'] }
# https://github.com/prefix-dev/pixi/discussions/1897
prek-install = { cmd = ['prek', 'install', '-f'] }
prek-run = { cmd = ['prek', 'run', '--all-files'] }


[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.format]
preview = true

[tool.ruff.lint]
future-annotations = true
ignore = [
  'ANN',      # mypy handles our type annotations
  'COM812',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'COM819',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'CPY',      # not publishing publicly
  'D1',       # docstrings are optional
  'E111',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E114',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E117',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'EM101',
  'ERA',      # do not remove commented-out code
  'ISC001',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ISC002',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'PLR2004',
  'Q000',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q001',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q002',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q003',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'S105',
  'S106',
  'SLF001',
  'T201',
  'TRY003',
  'W191',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
]
select = ['ALL']

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = 'pep257'
