# vim: set ft=toml :


[project]
name = 'parquet-modular-encryption'


[tool.pixi.workspace]
channels = ['conda-forge']
platforms = [
  'linux-64',
  'linux-aarch64',
  'osx-arm64',
]

[tool.pixi.dependencies]
python = { version = '>=3.14,<3.15' }

[tool.pixi.pypi-dependencies]
cryptography = { version = '*' }
fastapi = { version = '*' }
httpx = { version = '*' }
pyarrow = { version = '*' }
pydantic = { version = '*' }
uvicorn = { version = '*', extras = ['standard'] }

[tool.pixi.environments]
default = { solve-group = 'default' }
lint = { features = ['lint'], solve-group = 'default' }

[tool.pixi.feature.lint.pypi-dependencies]
ruff = { version = '*' }


[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.format]
preview = true

[tool.ruff.lint]
future-annotations = true
ignore = [
  'ANN',      # mypy handles our type annotations
  'COM812',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'COM819',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'CPY',      # not publishing publicly
  'D1',       # docstrings are optional
  'E111',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E114',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E117',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'EM101',
  'ERA',      # do not remove commented-out code
  'ISC001',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ISC002',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'PLR2004',
  'Q000',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q001',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q002',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q003',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'S105',
  'S106',
  'SLF001',
  'T201',
  'TRY003',
  'W191',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
]
select = ['ALL']

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = 'pep257'
